# personal_assistant

./: Dockerfile  UML.drawio  pyproject.toml  Диаграмма без названия.drawio
src/: error_handler.py  interface.py  main.py  user_actions_handler.py
src/address_book/: contact_book.py
src/notes/: note_book.py
src/sort_file/: sort.py
src/utils/: constants.py  parser.py
